<resources>
    <string name="app_name">VIRBand Household Survey</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
  <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."
  </string>
    <string name="Yes"> ہاں </string>
    <string name="No"> نہیں </string>
    <string name="J_Yes"> جی ہاں </string>
    <string name="J_No"> جی نہیں </string>
    <string name="NotAvailable"> دستیاب نہیں ہے </string>
    <string name="DNK"> معلوم نہیں </string>
    <string name="Others"> دیگر (وضاحت کریں۔۔۔) </string>
    <string name="end_interview"> اختتام </string>
    <string name="start_interview"> انٹرویو شروع کریں </string>
    <string name="subAreaCode"> کلسٹر نمبر </string>
    <string name="household"> گھرانہ نمبر </string>
    <string name="istatus"> دورے کا نتیجہ </string>
    <string name="istatusa"> مکمل </string>
    <string name="istatusb"> نا مکمل </string>
    <string name="istatusc"> منع کردیا </string>
    <string name="sectionA"> A. شناختی تفصیلات </string>
    <string name="sectionB"> B.	 انڈیکس چائلڈ کی تفصیلات</string>
    <string name="sectionC"> C.	 جوابدہندہ کی تفصیلات</string>
    <string name="sectionD"> D.	 انڈیکس چائلڈ کے خاندان کی سماجی ومعاشی حیثیت </string>
    <string name="sectionE"> E.	 معلومات، رویہ اور عمل</string>
    <string name="sectionF"> F.	 انڈیکس چائلڈ کا ویکسینیشن ریکارڈ</string>
  <string name="sectionG"> G. دیگر بچے کی تفصیلات (انڈیکس چائلڈ کے علاوہ، تیس (۳۰) ماہ سے کم عمر) </string>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="AreaCode">علاقہ</string>
  <string name="childCount">تیس (۳۰) ماہ سے کم عمر بچوں کی تعداد (بشمول منتخب بچےکے)</string>
    <string name="va01"> علاقہ کوڈ </string>
    <string name="va101"> پہلوان گوٹھ </string>
    <string name="va102"> سچل گوٹھ </string>
    <string name="va02"> کلسٹر نمبر # </string>
    <string name="va03"> گھرانہ نمبر# </string>
    <string name="vb01"> نام </string>
    <string name="vb02"> جنس </string>
    <string name="vb0201"> بچہ </string>
    <string name="vb0202"> بچی </string>
    <string name="vb03"> تاریخ پیدائش </string>
    <string name="vb04"> عمر </string>
    <string name="vb04d"> دن </string>
    <string name="vb04m"> مہینہ </string>
    <string name="vb04y"> سال </string>
    <string name="vb05"> والد کا نام </string>
    <string name="vb06"> والدہ کا نام </string>
    <string name="vb07"> جائے پیدائش </string>
    <string name="vb0701"> سرکاری ہسپتال </string>
    <string name="vb0702"> نجی ہسپتال </string>
    <string name="vb0703"> میٹرنٹی ہوم (ٹی بی اے یا ایل ایچ وی کا گھر) </string>
    <string name="vb0704"> گھر پر </string>
    <string name="vb0705"> دیگر (دیگر کی وضاحت کریں) </string>
    <string name="vc01"> نام </string>
    <string name="vc02"> عمر </string>
    <string name="vc03"> جنس </string>
    <string name="vc0301"> مرد </string>
    <string name="vc0302"> عورت </string>
    <string name="vc04"> پتہ </string>
    <string name="vc05"> رہائش </string>
    <string name="vc0501"> ذاتی </string>
    <string name="vc0502"> کرایہ دار </string>
    <string name="vc06"> رابطے کی تفصیلات </string>
    <string name="vc0601"> پی ٹی سی ایل نمبر </string>
    <string name="vc0602"> موبائل نمبر </string>
    <string name="vc07"> مذہب </string>
    <string name="vc0701"> اسلام </string>
    <string name="vc0702"> ہندوازم </string>
    <string name="vc0703"> عیسائیت </string>
    <string name="vc08"> خاندانی نظام </string>
    <string name="vc0801"> مشترکہ </string>
    <string name="vc0802"> انفرادی </string>
    <string name="vc09"> گھر میں عموماً بولی جانےوالی زبان </string>
    <string name="vc0901"> اردو </string>
    <string name="vc0902"> سندھی </string>
    <string name="vc0903"> سرائیکی </string>
    <string name="vc0904"> پشتو </string>
    <string name="vc0905"> پنجابی </string>
    <string name="vc0906"> بلوچی </string>
    <string name="vc10"> ازدواجی حیثیت </string>
    <string name="vc1001"> غیر شادی شدہ </string>
    <string name="vc1002"> شادی شدہ </string>
    <string name="vc1003"> طلاق یافتہ </string>
    <string name="vc1004"> علیحدہ </string>
    <string name="vc1005"> بیوہ/ رانڈوہ </string>
    <string name="vc11"> انڈیکس چائلڈ سے رشتہ </string>
    <string name="vc1101"> والدہ </string>
    <string name="vc1102"> والد </string>
    <string name="vc1103"> دادی/نانی </string>
    <string name="vc1104"> دادا/نانا </string>
    <string name="vc1105"> خالہ/پھپھو/چچی/مامی </string>
    <string name="vc1106"> ماموں/ چچا/ پھوپھا/خالو </string>
    <string name="vc1107"> بہن </string>
    <string name="vc1108"> بھائی </string>
    <string name="vd01"> جوابدہندہ کی تعلیمی قابلیت </string>
    <string name="vd0101"> روایتی تعلیم سے نا آشنا </string>
    <string name="vd0102"> ابتدائی </string>
    <string name="vd0103"> ثانوی </string>
    <string name="vd0104"> میٹرک </string>
    <string name="vd0105"> انٹر </string>
    <string name="vd0106"> گریجویشن </string>
    <string name="vd0107"> ماسٹرز </string>
    <string name="vd0108"> مدرسہ تعلیم </string>
    <string name="vd02"> والدہ کی تعلیم </string>
    <string name="vd0201"> روایتی تعلیم سے نا آشنا </string>
    <string name="vd0202"> ابتدائی </string>
    <string name="vd0203"> ثانوی </string>
    <string name="vd0204"> میٹرک </string>
    <string name="vd0205"> انٹر </string>
    <string name="vd0206"> گریجویشن </string>
    <string name="vd0207"> ماسٹرز </string>
    <string name="vd0208"> مدرسہ تعلیم </string>
    <string name="vd03"> والد کی تعلیم </string>
    <string name="vd0301"> روایتی تعلیم سے نا آشنا </string>
    <string name="vd0302"> ابتدائی </string>
    <string name="vd0303"> ثانوی </string>
    <string name="vd0304"> میٹرک </string>
    <string name="vd0305"> انٹر </string>
    <string name="vd0306"> گریجویشن </string>
    <string name="vd0307"> ماسٹرز </string>
    <string name="vd0308"> مدرسہ تعلیم </string>
    <string name="vd04"> والد کا پیشہ </string>
    <string name="vd0401"> بیروزگار </string>
    <string name="vd0402"> سرکاری ملازم </string>
    <string name="vd0403"> مزدور </string>
    <string name="vd0404"> نجی ملازم </string>
    <string name="vd0405"> نجی کاروبار </string>
    <string name="vd05"> والدہ کا پیشہ </string>
    <string name="vd0501"> بیروزگار </string>
    <string name="vd0502"> سرکاری ملازم </string>
    <string name="vd0503"> مزدور </string>
    <string name="vd0504"> نجی ملازم </string>
    <string name="vd0505"> نجی کاروبار </string>
    <string name="vd0506"> گھریلو خاتون </string>
    <string name="vd06"> گھرانے کی کل ماہانہ آمدنی </string>
    <string name="vd0601"> دس ہزار روپے سے کم </string>
    <string name="vd0602"> دس ہزار ایک سے تیس ہزار روپے تک </string>
    <string name="vd0603"> تیس ہزار ایک سے پچاس ہزار روپے تک </string>
    <string name="vd0604"> پچاس ہزار ایک سے ستر ہزار روپے تک </string>
    <string name="vd0605"> ستر ہزار ایک سے نوے ہزار روپے تک </string>
    <string name="vd0606"> نوے ہزار روپےسے زائد </string>
    <string name="ve01"> کیا آپ نے کبھی حفاظتی ٹیکوں کے بارے میں سنا ہے </string>
    <string name="ve02"> آپ نے حفاظتی ٹیکوں کے بارے میں کیا سنا ہے </string>
    <string name="ve0201"> بیماریوں کے علاج کے لئے </string>
    <string name="ve0202"> بچوں کے لئے اچھا نہیں ہے </string>
    <string name="ve0203"> بچوں کے لئے بہت اہم ہے </string>
    <string name="ve0204"> بیماریوں سے بچاؤ کے لئے </string>
    <string name="ve0205"> قوت مدافعت بڑھانے کے لئے </string>
    <string name="ve03"> حفاظتی ٹیکے لگوانے کے بارے میں کہاں سے معلومات حاصل ہوئیں </string>
    <string name="ve0301"> ٹیکے لگانے والا </string>
    <string name="ve0302"> پولیو ٹیم </string>
    <string name="ve0303"> اخبار </string>
    <string name="ve0304"> معلوماتی مواد </string>
    <string name="ve0305"> ٹی وی </string>
    <string name="ve0306"> ریڈیو </string>
    <string name="ve0307"> استاد </string>
    <string name="ve0308"> ڈاکٹر </string>
    <string name="ve0309"> پڑوسی </string>
    <string name="ve0310"> دوست </string>
    <string name="ve0311"> رشتےدار </string>
    <string name="ve0312"> مذہبی رہنما </string>
    <string name="ve04"> آپ کے خیال میں کیا نومولود بچوں کوحفاظتی ٹیکے لگوانا ضروری ہے </string>
    <string name="ve04a"> کیوں ضروری ہے </string>
    <string name="ve04a1"> بچے کو بیماریوں سے بچانے کے لئے </string>
    <string name="ve04a2"> بچہ مزید صحتمند ہوجاتا ہے </string>
    <string name="ve04a3"> ویکسینیشن قوت مدافعت بڑھاتی ہے </string>
    <string name="ve04a4"> بچہ جسمانی طور پر بہت کمزور اورغیر محفوظ ہے </string>
    <string name="ve04a5"> یہ بچے کو مزید مضبوط بناتی ہے </string>
    <string name="ve04b"> کیوں غیر ضروری ہے </string>
    <string name="ve04b1"> بچہ کسی انجیکشن کو برداشت نہیں کر سکتا </string>
    <string name="ve04b2"> ویکسینیشن کی وجہ سے بچہ مزید غیر محفوظ ہو سکتا ہے </string>
    <string name="ve04b3"> ویکسینیشن سے بچوں میں نامردی /بانجھ پن پیدا ہوتی ہے </string>
    <string name="ve04b4"> مذہبی اعتقادات کی وجہ سے </string>
    <string name="ve05"> حفاظتی ٹیکے لگوانے کے لئے مناسب عمر کیا ہے </string>
    <string name="ve0501"> پیدائش کے وقت </string>
    <string name="ve0502"> ایک ہفتے کی عمر میں </string>
    <string name="ve0503"> ۲ ہفتے کی عمر میں </string>
    <string name="ve0504"> ایک ماہ کی عمر میں </string>
    <string name="ve0505"> دو ماہ کی عمر میں </string>
    <string name="ve06"> آپ کے خیال میں حفاظتی ٹیکے لگوانےکےلئے یہ عمر کیوں مناسب ہے </string>
    <string name="ve0601"> بچے کو تھوڑا کم درد محسوس ہو گا </string>
    <string name="ve0602"> حفاظتی ٹیکے قوت مدافعت بڑھاتے ہیں </string>
    <string name="ve0603"> بچپن میں بچے کو زیادہ سے زیادہ تحفظ فراہم کرنے کے لئے </string>
    <string name="ve0604"> حفاظتی ٹیکے زیادہ بہتر طور پر اثر کریں گے </string>
    <string name="ve07"> ۴ ماہ کی عمر تک میں بچے کو کتنی مرتبہ حفاظتی ٹیکے لگائے جاتے ہیں </string>
    <string name="ve0701"> ایک </string>
    <string name="ve0702"> دو </string>
    <string name="ve0703"> تین </string>
    <string name="ve0704"> چار </string>
    <string name="ve08"> کیا آپ کے خیال میں سارے حفاظتی ٹیکے لگوانا اہم ہے </string>
    <string name="ve08a"> کیوں اہم ہے </string>
    <string name="ve08a1"> بچے کو بیماریوں سے بچانے کے لئے </string>
    <string name="ve08a2"> بچہ مزید صحتمند ہو جاتا ہے </string>
    <string name="ve08a3"> ویکسینیشن قوت مدافعت بڑھاتا ہے </string>
    <string name="ve08a4"> بچہ جسمانی طور پر بہت کمزور اورغیر محفوظ ہے </string>
    <string name="ve08a5"> یہ بچے کو مزید مضبوط بناتی ہے </string>
    <string name="ve08b"> کیوں غیر اہم ہے </string>
    <string name="ve08b1"> بچہ بہت سے انجیکشن برداشت نہیں کر سکتا </string>
    <string name="ve08b2"> ویکسینیشن کی وجہ سے بچہ مزید غیر محفوظ ہو جاتا ہے </string>
    <string name="ve08b3"> ویکسینیشن سے بچوں میں نامردی /بانجھ پن پیدا ہوتی ہے </string>
    <string name="ve08b4"> مذہبی اعتقادات کی وجہ سے </string>
    <string name="ve09"> کیا آپ کو معلوم ہے کہ حکومت کی طرف سے تمام حفاظتی ٹیکے مفت ملتے ہیں </string>
    <string name="ve0901"> جی مجھے معلوم ہے </string>
    <string name="ve0902"> نہیں مجھے اس کے بارے میں معلوم نہیں </string>
    <string name="ve0903"> نہیں، ویکسینیشن مفت نہیں ہوتی ہے </string>
    <string name="ve10"> آپ کہاں سے مفت میں حفاظتی ٹیکے لے سکتے ہیں </string>
    <string name="ve1001"> نجی ہسپتال </string>
    <string name="ve1002"> نجی کلینک </string>
</resources>